Logo and backgorund upadted

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Ronda de negocios</title>
+		<title>Rondas UNS</title>
 		<script type="module" src="/src/main.js"></script>
+		<link rel="icon" type="image/png" href="/public/favicon.png">
 	</head>
 	<body>
 		<main class="flex flex-col h-screen" id="app"></main>
